src/test/resources/plang-strict/passing/functions/013_multiple_declaration_blocks.plang
**#Multiple declare blocks are given
**FirstErrorLoc:6,3

függvény f(x: Egész): Egész
  Változók: y: Egész
  Változók: z: Valós

  Eredmény := x
függvény_vége

program t
  változók:
    x: Egész

  x := f(-1)
program_vége
