src/test/resources/plang-strict/parse-error/005_vardecl_nocomma.plang
**#Missing comma between variable names
**FirstErrorLoc:5,7
program vardecl_nocomma_1
  Változók:
    x y: Egész
  x := 5
  y := 6
program_vége
